--- a/Social-Visor/styles/components/footer.css
+++ b/Social-Visor/styles/components/footer.css
@@ -14,6 +14,7 @@
     gap: 48px;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(14px);
+    -webkit-backdrop-filter: blur(14px);
     justify-content: space-between;
     z-index: 3;
     transition: all 0.3s ease;
